tests/error/construct/struct_eq.mml
type s = 
  | Some of int
  | None

type s2 = 
  | S2 of int

Some(2) = S2(2)
